# AnotherGameEngine

./: CMakeLists.txt  build.sh  readme.md  run.sh
Game/: CMakeLists.txt
Game/src/: main.cpp
GameEngine/: CMakeLists.txt
GameEngine/include/: engine.hpp
GameEngine/include/utility/: logging.hpp  vec2.hpp
GameEngine/include/vulkan/: vulkan.hpp
GameEngine/src/: engine.cpp
GameEngine/src/utility/: logging.cpp
